# libvlc-example-bundle

./: .gitlab-ci.yml  README.md  build.sh  launch_test.sh  libvlc-test.c  meson.build  native-libvlc-example.yaml
mod/: vlc.mod
